force-app/main/default/objects/Used_Car_Quote__c/fields/Actual_ARF_Paid__c.field-meta.xml
<CustomField>
    <fullName>Actual_ARF_Paid__c</fullName>
    <label>Actual ARF Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>