force-app/main/default/objects/Used_Car_Quote__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <label>Chassis No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>