force-app/main/default/objects/Used_Car_Quote__c/fields/COE_Category__c.field-meta.xml
<CustomField>
    <fullName>COE_Category__c</fullName>
    <label>COE Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>