force-app/main/default/objects/Used_Car_Quote__c/fields/COE_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>COE_Rebate_Amount__c</fullName>
    <label>COE Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>