force-app/main/default/objects/Used_Car_Quote__c/fields/Customer_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Type__c</fullName>
    <label>Customer ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business (e.g. 51234567M)</fullName>
                <label>Business</label>
            </value>
            <value>
                <fullName>Club/Association/Organisation (e.g. T08PQ1234A)</fullName>
                <label>Club/Association/Organisation</label>
            </value>
            <value>
                <fullName>Company (e.g. 198912345K)</fullName>
                <label>Company</label>
            </value>
            <value>
                <fullName>Foreign Company (e.g. T08FC1234A)</fullName>
                <label>Foreign Company</label>
            </value>
            <value>
                <fullName>Foreign Identification Number (e.g. F/G/M1234567N)</fullName>
                <label>Foreign Identification Number</label>
            </value>
            <value>
                <fullName>Foreign Passport (e.g. 12345678)</fullName>
                <label>Foreign Passport</label>
            </value>
            <value>
                <fullName>Government (e.g. T08GA1234A)</fullName>
                <label>Government</label>
            </value>
            <value>
                <fullName>Limited Liability Partnership (e.g. T08LL1234A)</fullName>
                <label>Limited Liability Partnership</label>
            </value>
            <value>
                <fullName>Limited Partnership (e.g. T08LP1234A)</fullName>
                <label>Limited Partnership</label>
            </value>
            <value>
                <fullName>Malaysia NRIC (e.g. 200312345678)</fullName>
                <label>Malaysia NRIC</label>
            </value>
            <value>
                <fullName>Professional (e.g. T08PQ1234A)</fullName>
                <label>Professional</label>
            </value>
            <value>
                <fullName>Singapore NRIC (e.g. S1234567D)</fullName>
                <default>true</default>
                <label>Singapore NRIC</label>
            </value>
            <value>
                <fullName>Statutory Board (e.g. T08GB1234A)</fullName>
                <label>Statutory Board</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>