force-app/main/default/objects/Used_Car_Quote__c/fields/Customer_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Customer_NRIC__c</fullName>
    <inlineHelpText>Input last 4 characters (e.g. 567D)</inlineHelpText>
    <label>Customer NRIC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>