force-app/main/default/objects/Used_Car_Quote__c/fields/Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Doc_No__c</fullName>
    <label>Doc. No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>