force-app/main/default/objects/Used_Car_Quote__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <label>Engine No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>