force-app/main/default/objects/Used_Car_Quote__c/fields/Intended_Deregistration_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Deregistration_Date__c</fullName>
    <label>Intended Deregistration Date</label>
    <type>Date</type>
</CustomField>