force-app/main/default/objects/Used_Car_Quote__c/fields/Machine_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Machine_Depreciation__c</fullName>
    <label>Machine Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>