force-app/main/default/objects/Used_Car_Quote__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage (km)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>