force-app/main/default/objects/Used_Car_Quote__c/fields/OPC_Car__c.field-meta.xml
<CustomField>
    <fullName>OPC_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPC Car</label>
    <type>Checkbox</type>
</CustomField>