force-app/main/default/objects/Used_Car_Quote__c/fields/OPC_Cash_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>OPC_Cash_Rebate_Amount__c</fullName>
    <label>OPC Cash Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>