force-app/main/default/objects/Used_Car_Quote__c/fields/OPC_Cash_Rebate_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>OPC_Cash_Rebate_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPC Cash Rebate Eligibility</label>
    <type>Checkbox</type>
</CustomField>