force-app/main/default/objects/Used_Car_Quote__c/fields/OPC_Cash_Rebate_Eligibility_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>OPC_Cash_Rebate_Eligibility_Expiry_Date__c</fullName>
    <label>OPC Cash Rebate Eligibility Expiry Date</label>
    <type>Date</type>
</CustomField>