force-app/main/default/objects/Used_Car_Quote__c/fields/Original_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Registration_Date__c</fullName>
    <label>Original Registration Date</label>
    <type>Date</type>
</CustomField>