force-app/main/default/objects/Used_Car_Quote__c/fields/PARF_Eligibility_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PARF_Eligibility_Expiry_Date__c</fullName>
    <label>PARF Eligibility Expiry Date</label>
    <type>Date</type>
</CustomField>