force-app/main/default/objects/Used_Car_Quote__c/fields/PARF_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>PARF_Rebate_Amount__c</fullName>
    <label>PARF Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>