force-app/main/default/objects/Used_Car_Quote__c/fields/PQP_Paid__c.field-meta.xml
<CustomField>
    <fullName>PQP_Paid__c</fullName>
    <label>PQP Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>