force-app/main/default/objects/Used_Car_Quote__c/fields/Previous_Accidents__c.field-meta.xml
<CustomField>
    <fullName>Previous_Accidents__c</fullName>
    <inlineHelpText>This field could be either positive or negative</inlineHelpText>
    <label>Previous Accidents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>