force-app/main/default/objects/Used_Car_Quote__c/fields/RPA_Error__c.field-meta.xml
<CustomField>
    <fullName>RPA_Error__c</fullName>
    <description>Return some error messages if encountered critical error from the LTA site or Robot, UiPath RPA will not return this Data if overall process is normal</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>