force-app/main/default/objects/Used_Car_Quote__c/fields/Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Used_Car_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>