force-app/main/default/objects/Used_Car_Quote__c/fields/Spare_Key__c.field-meta.xml
<CustomField>
    <fullName>Spare_Key__c</fullName>
    <inlineHelpText>This field could be either positive or negative</inlineHelpText>
    <label>Spare Key</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>