force-app/main/default/objects/Used_Car_Quote__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>50</length>
    <type>Text</type>
</CustomField>