force-app/main/default/objects/Used_Car_Quote__c/fields/Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_No__c</fullName>
    <label>Vehicle No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>