force-app/main/default/objects/Used_Car_Quote__c/fields/Vehicle_to_be_Exported__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_to_be_Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle to be Exported</label>
    <type>Checkbox</type>
</CustomField>