force-app/main/default/objects/Used_Car_Quote__c/recordTypes/MB_Quote.recordType-meta.xml
<RecordType>
    <fullName>MB_Quote</fullName>
    <active>true</active>
    <label>MB Quote</label>
</RecordType>