force-app/main/default/objects/Used_Car_Quote__c/recordTypes/MF_Quote.recordType-meta.xml
<RecordType>
    <fullName>MF_Quote</fullName>
    <active>true</active>
    <label>MF Quote</label>
</RecordType>