force-app/main/default/objects/Used_Car_Quote__c/validationRules/Assign_quote_to_right_owner_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_quote_to_right_owner_profile</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &apos;MF Quote&apos; &amp;&amp;  Owner:User.Profile.Name = &apos;MB Purchaser&apos; ||
RecordType.Name = &apos;MB Quote&apos; &amp;&amp;  Owner:User.Profile.Name = &apos;MF Purchaser&apos;</errorConditionFormula>
    <errorMessage>MF (MB) Quote can only be assigned to owners with MF (MB) Purchaser Profile</errorMessage>
</ValidationRule>