force-app/main/default/objects/Used_Car_Quote__c/validationRules/Saved_Purchaser_Quote_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Saved_Purchaser_Quote_cannot_be_edited</fullName>
    <active>true</active>
    <description>Prevent users from editing purchaser quote after saving</description>
    <errorConditionFormula>(
				ISCHANGED( Purchaser_Quote__c ) 
				&amp;&amp; NOT(ISBLANK(PRIORVALUE( Purchaser_Quote__c)))				
)</errorConditionFormula>
    <errorDisplayField>Purchaser_Quote__c</errorDisplayField>
    <errorMessage>Create/Update quotation to update quote.</errorMessage>
</ValidationRule>