force-app/main/default/objects/Used_Car_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_No__c</columns>
    <columns>Intended_Deregistration_Date__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Purchaser_Quote__c</columns>
    <columns>Machine_Quote__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Make__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Vehicle_Model__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RPA_Error__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>