force-app/main/default/objects/Used_Car_Quote__c/listViews/Created_TODAY.listView-meta.xml
<ListView>
    <fullName>Created_TODAY</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_No__c</columns>
    <columns>Intended_Deregistration_Date__c</columns>
    <columns>Customer_NRIC__c</columns>
    <columns>Mileage__c</columns>
    <columns>Sales_Consultant__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Make__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Vehicle_Model__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RPA_Error__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created TODAY</label>
</ListView>